# secql

./: .gitignore  Procfile  README.md  pyproject.toml  railpack.json  railway.toml
docs/plans/: 2026-01-28-secql-design.md  2026-01-28-secql-implementation.md
sdk/: LICENSE  README.md  pyproject.toml
sdk/secql/: __init__.py  client.py  exceptions.py  models.py
sdk/tests/: test_async_client.py  test_client.py
src/secql_api/: auth.py  config.py  db.py  exceptions.py  main.py  models.py  rate_limit.py  sec_client.py
src/secql_api/routes/: __init__.py  companies.py  keys.py
supabase/: config.toml
supabase/migrations/: 20260130000000_api_keys.sql
tests/: test_api_companies.py  test_auth.py  test_health.py  test_models.py  test_rate_limit.py  test_sec_client.py  test_sec_client_retry.py
